--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -20,7 +20,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise 2: Create markdown cell with title of the notebook**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data science Tools and Ecosystem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 11 - Create a markdown cell to indicate the Author's name**"
    ]
   },
   {
@@ -35,7 +49,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise 3 - Create a markdown cell for an introduction**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 10 - Insert a markdown cell to list Objectives**"
    ]
   },
   {
@@ -54,6 +82,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise 4 - Create a markdown cell to list data science languages**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Some of the popular languages that Data Scientists use are:\n",
     "1. Python\n",
     "2. R\n",
@@ -64,10 +99,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise 5 - Create a markdown cell to list data science libraries**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Some of the commonly used libraries used by Data Scientists include:\n",
     "1. Pandas\n",
     "2. NumPy\n",
     "3. Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 6 - Create a markdown cell with a table of Data Science tools**"
    ]
   },
   {
@@ -86,7 +135,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercise 7 - Create a markdown cell introducing arithmetic expression examples**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 8 - Create a code cell to multiply and add numbers**"
    ]
   },
   {
@@ -111,6 +174,13 @@
     "# This is a simple arithmetic expression to multiply then add integers\n",
     "# This is a simple arithmetic expression to multiply integer 3 with integer 4 then add integer 5\n",
     "(3*4)+5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 9 - Create a code cell to convert minutes to hours**"
    ]
   },
   {
